--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
 
         <div class="container">
             <a href="https://tewetech.github.io/home/" class="card-link">
-                <i class="fas fa-laptop-code card-icon"></i> 
-                <h2 class="card-title">KALAU TAMBAH CARD BARU COPY INI</h2>
+                <i class="fas fa-bookmark"></i> 
+                <h2 class="card-title">TAMBAH CARD BARU COPY INI</h2>
                 <p class="card-subtitle">
-                    Script Ini Baris ke 282 Sampai 290 
+                    Baris ke 282 Sampai 290 https://tewetech.github.io/icon  
                 </p>
             </a>
         </div>
@@ -392,3 +392,4 @@
     </script>
 </body>
 </html>
+
