--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
 
         <div class="container">
             <a href="https://tewetech.github.io/home/" class="card-link">
-                <i class="fas fa-bookmark"></i> 
-                <h2 class="card-title">TAMBAH CARD BARU COPY INI</h2>
+                <i class="fas fa-bookmark card-icon"></i> 
+                <h2 class="card-title">TAMBAH CARD COPY INI</h2>
                 <p class="card-subtitle">
                     Baris ke 282 Sampai 290 https://tewetech.github.io/icon  
                 </p>
@@ -392,4 +392,5 @@
     </script>
 </body>
 </html>
+
 
