--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
         <div class="container">
             <a href="https://tewetech.github.io/home/" class="card-link">
-                <i class="fas fa-bookmark card-icon"></i> 
+                <i class="fas fa-paste card-icon"></i> 
                 <h2 class="card-title">TAMBAH CARD COPY INI</h2>
                 <p class="card-subtitle">
                     Baris ke 282 Sampai 290 https://tewetech.github.io/icon  
@@ -290,6 +290,10 @@
         </div>
         
 
+
+
+
+		
 
 
         <div class="container">
@@ -301,9 +305,7 @@
                 </p>
             </a>
         </div>
-        
-
-		
+	
         <div class="container">
             <a href="https://tewetech.github.io/prompt" class="card-link">
                 <i class="fas fa-magic card-icon"></i> 
@@ -392,5 +394,6 @@
     </script>
 </body>
 </html>
+
 
 
