--- a/index.html
+++ b/index.html
@@ -289,11 +289,18 @@
             </a>
         </div>
         
-
-
-
-
 		
+		
+        <div class="container">
+            <a href="https://tewetech.github.io/pesanwa/" class="card-link">
+                <i class="fab fa-whatsapp card-icon"></i> 
+                <h2 class="card-title">Pesan WA Wedding-Ku</h2>
+                <p class="card-subtitle">
+                    Otomatis menghasilkan pesan dan link undangan via WhatsApp
+                </p>
+            </a>
+        </div>
+
 
 
         <div class="container">
@@ -305,7 +312,10 @@
                 </p>
             </a>
         </div>
-	
+
+
+
+
         <div class="container">
             <a href="https://tewetech.github.io/prompt" class="card-link">
                 <i class="fas fa-magic card-icon"></i> 
@@ -316,15 +326,22 @@
             </a>
         </div>
 
+
+
+
+
         <div class="container">
-            <a href="https://tewetech.github.io/quotes/" class="card-link">
-                <i class="fas fa-quote-right card-icon"></i> 
-                <h2 class="card-title">Quotes-Ku</h2>
+            <a href="https://tewetech.github.io/livecode/" class="card-link">
+                <i class="fas fa-laptop-code card-icon"></i> 
+                <h2 class="card-title">Livecode-Ku</h2>
                 <p class="card-subtitle">
-                    Kumpulan quotes inspirasi untuk motivasi hidup dan percintaan
+                    Belajar dan latihan berbagai bahasa pemrograman secara interaktif
                 </p>
             </a>
         </div>
+
+
+
 
         <div class="container">
             <a href="https://tewetech.github.io/sholat/" class="card-link">
@@ -336,25 +353,19 @@
             </a>
         </div>
 
+
+
         <div class="container">
-            <a href="https://tewetech.github.io/livecode/" class="card-link">
-                <i class="fas fa-laptop-code card-icon"></i> 
-                <h2 class="card-title">Livecode-Ku</h2>
+            <a href="https://tewetech.github.io/quotes/" class="card-link">
+                <i class="fas fa-quote-right card-icon"></i> 
+                <h2 class="card-title">Quotes-Ku</h2>
                 <p class="card-subtitle">
-                    Belajar dan latihan berbagai bahasa pemrograman secara interaktif
+                    Kumpulan quotes inspirasi untuk motivasi hidup dan percintaan
                 </p>
             </a>
         </div>
-        
-        <div class="container">
-            <a href="https://tewetech.github.io/pesanwa/" class="card-link">
-                <i class="fab fa-whatsapp card-icon"></i> 
-                <h2 class="card-title">Pesan WA Wedding-Ku</h2>
-                <p class="card-subtitle">
-                    Otomatis menghasilkan pesan dan link undangan via WhatsApp
-                </p>
-            </a>
-        </div>
+
+
 
         <div class="container">
             <a href="https://tewetech.github.io/nota/" class="card-link">
@@ -375,7 +386,19 @@
                 </p>
             </a>
         </div>
+
+        <div class="container">
+            <a href="https://tewetech.github.io/icon/" class="card-link">
+                <i class="fas fa-medal card-icon"></i>
+                <h2 class="card-title">Icon-Ku</h2>
+                <p class="card-subtitle">
+                    Kumpulan icon icon keren by Tewe Tech
+                </p>
+            </a>
+        </div>
     </div>
+
+
 
     <footer class="site-footer">
         <p id="copyright">copyright 2025 Tewe Tech | Tri Wantoro</p>
@@ -394,6 +417,5 @@
     </script>
 </body>
 </html>
-
 
 
