--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@
         </div>
 
         <div class="container">
-            <a href="https://tewetech.github.io/uji-coba-v1" class="card-link">
+            <a href="https://tewetech.github.io/experiment" class="card-link">
                 <i class="fas fa-flask card-icon"></i> 
-                <h2 class="card-title">Uji Coba-Ku</h2>
+                <h2 class="card-title">Experiment-Ku</h2>
                 <p class="card-subtitle">
                     Tempat khusus untuk melakukan uji coba dan eksperimen project
                 </p>
@@ -417,5 +417,6 @@
     </script>
 </body>
 </html>
+
 
 
