--- a/index.html
+++ b/index.html
@@ -653,8 +653,8 @@
         <div class="container">
             <i class="fas fa-image card-icon"></i>
             <h2 class="card-title">Prompt Image Generator</h2>
-            <a href="https://promptgambar-tewe.netlify.app/" class="card-link-sub">
-                promptgambar-tewe.netlify.app
+            <a href="https://tewetech.github.io/promptgambar" class="card-link-sub">
+                tewetech.github.io/promptgambar
             </a>
             <p class="card-subtitle">
                 Kumpulan prompt untuk menghasilkan gambar kreatif.
@@ -845,3 +845,4 @@
     </script>
 </body>
 </html>
+
