--- a/index.html
+++ b/index.html
@@ -705,6 +705,17 @@
             </p>
         </div>
 
+        <div class="container">
+            <i class="fas fa-keyboard-icon"></i>
+            <h2 class="card-title">TeweType Fast!</h2>
+            <a href="https://tewetech.github.io/tewetype/" class="card-link-sub">
+                tewetech.github.io/tewetype
+            </a>
+            <p class="card-subtitle">
+                Tempat belajar mengetik dan mendapatkan sertifikat.
+            </p>
+        </div>
+
     </div>
 
     <footer class="site-footer">
@@ -845,4 +856,5 @@
     </script>
 </body>
 </html>
+
 
