--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
         </div>
 
         <div class="container">
-			<i class="fas fa-tools card-icon"></i>
+			<i class="fas fa-keyboard card-icon"></i>
             <h2 class="card-title">TeweType Fast!</h2>
             <a href="https://tewetech.github.io/tewetype/" class="card-link-sub">
                 tewetech.github.io/tewetype
@@ -856,6 +856,7 @@
     </script>
 </body>
 </html>
+
 
 
 
