--- a/index.html
+++ b/index.html
@@ -587,8 +587,8 @@
         <div class="container">
             <i class="fas fa-calculator card-icon"></i>
             <h2 class="card-title">Kalkulator</h2>
-            <a href="https://kalkulator-tewe.netlify.app/" class="card-link-sub">
-                kalkulator-tewe.netlify.app
+            <a href="https://tewetech.github.io/kalkulator" class="card-link-sub">
+                tewetech.github.io/kalkulator
             </a>
             <p class="card-subtitle">
                 Kalkulator cepat dengan riwayat hitungan otomatis.
@@ -598,8 +598,8 @@
         <div class="container">
             <i class="fas fa-file-invoice-dollar card-icon"></i>
             <h2 class="card-title">Nota</h2>
-            <a href="https://nota-tewe.netlify.app/" class="card-link-sub">
-                nota-tewe.netlify.app
+            <a href="https://tewetech.github.io/nota" class="card-link-sub">
+                tewetech.github.io/nota
             </a>
             <p class="card-subtitle">
                 Aplikasi khusus untuk membuat dan mengelola nota.
@@ -609,8 +609,8 @@
         <div class="container">
             <i class="fas fa-clock card-icon"></i>
             <h2 class="card-title">Jam</h2>
-            <a href="https://jam-tewe.netlify.app/" class="card-link-sub">
-                jam-tewe.netlify.app
+            <a href="https://tewetech.github.io/jamdigital" class="card-link-sub">
+                tewetech.github.io/jamdigital
             </a>
             <p class="card-subtitle">
                 Jam digital simpel dengan pilihan tema dan tanggal.
@@ -856,6 +856,7 @@
     </script>
 </body>
 </html>
+
 
 
 
