--- a/index.html
+++ b/index.html
@@ -631,8 +631,8 @@
         <div class="container">
             <i class="fas fa-magic card-icon"></i> 
             <h2 class="card-title">Prompt HTML</h2>
-            <a href="https://prompt-tewe.netlify.app" class="card-link-sub">
-                prompt-tewe.netlify.app
+            <a href="https://tewetech.github.io/prompt" class="card-link-sub">
+                tewetech.github.io/prompt
             </a>
             <p class="card-subtitle">
                 Berisi prompt andalan untuk berbagai proyek.
@@ -856,6 +856,7 @@
     </script>
 </body>
 </html>
+
 
 
 
